--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -46,6 +46,9 @@
     "react-router": "^2.0.1",
     "react-router-redux": "^4.0.0",
     "redux": "^3.3.1",
+    "redux-devtools": "^3.1.1",
+    "redux-devtools-dock-monitor": "^1.1.0",
+    "redux-devtools-log-monitor": "^1.0.4",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.0.1",
     "script-loader": "^0.6.1",
